# subbu_qr_generator

./: README.md  pyproject.toml
.github/workflows/: release-to-s3.yml
src/qr_generator/: cli.py
src/subbu_qr_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_generator.py
