[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subbu_qr_generator"
version = "0.1.0"
description = "A simple QR code generator with CLI support"
readme = "README.md"
authors = [{ name = "Subramanian", email = "subramani2889@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = ["qrcode[pil]>=7.4.2"]

[project.scripts]
qrgen = "qr_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
